package model;

public enum Couleur {
    NONE,
    RED,
    ORANGE,
    YELLOW,
    PURPLE,
    BLUE,
    GREEN,
    BLACK,
    WHITE;
}
