package model;

public class CreationClassique implements IndiceStrategy{
    @Override
    public Indice[] afficherIndice(Indice[] indices) {
        return new Indice[0];
    }
}
