package model;

public class CreationNumerique implements IndiceStrategy{
    @Override
    public Indice[] afficherIndice(Indice[] indices) {
        return new Indice[0];
    }
}
