package model;

public interface Observeur {
    void updateIndice(Indice indice);
}
