package view;

import model.Indice;
import model.ButtonObserveur;

import javax.swing.*;
public class EndWindow extends JFrame {

    public EndWindow() {
        setTitle("Fenêtre de jeu");
        setSize(400, 500);
        setDefaultCloseOperation(EXIT_ON_CLOSE);
    }
}