@startuml
'https://plantuml.com/class-diagram

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide enum methods
hide interface attributes

package controller
{
    class GameController{}
}

package model
{
    class Partie
    {
        - manche: int
        - nbpions: int
        - nbpions_combi: int
        - nb_tentative: int

        + Partie()
<<<<<<< HEAD
        + play()
        + setCouleurPossible(): Couleur[]
        + setManche(m: int)
        + setNbpions(nbp: int)
        + setNbpions_combi(nbc: int)
        + setNb_tentative(t: int)
=======
        + play(): void
        + setCouleurPossible(): Couleur[]
        + setManche(m: int): void
        + setNbpions(nbp: int): void
        + setNbpions_combi(nbc: int): void
        + setNb_tentative(t: int): void
>>>>>>> main
    }

    class Manche
    {
        - combinaison_secrete: Couleur[]
        - combinaison_actuelle: Couleur[]
        - indices: Indice[]
        - taille_combi: int
        - nbtentative: int
        - possibilite: Couleur[]

        + Manche(nbpions_combi: int, nb_tentative: int, possible: Couleur[])
<<<<<<< HEAD
        + setCombiSecrete()
        + affiche_combi()
        + affiche_combisecrete()
        + Change_Color(changement: Couleur[])
        + Cree_Indice()
        + affiche_indice()
    }

    enum Couleur
    {
        NONE, RED, ORANGE, YELLOW, PURPLE, BLUE, GREEN, BLACK, WHITE
    }

=======
        + setCombiSecrete(): void
        + affiche_combi(): void
        + affiche_combisecrete(): void
        + Change_Color(changement: Couleur[]): void
        + Cree_Indice(): void
        + affiche_indice(): void
    }

>>>>>>> main
    enum Indice
    {
        BONNE_PLACE, MAUVAISE_PLACE, INCORRECT
    }

    interface CreateIndiceStrategy <<interface>>
    {
        + CreerIndice(indices: Indice[]): Indice[]
    }

    class CreationFacile implements CreateIndiceStrategy
    {
        + CreerIndice(indices: Indice[]): Indice[]
    }

    class CreationClassique implements CreateIndiceStrategy
    {
        + CreerIndice(indices: Indice[]): Indice[]
    }

    class CreationNumerique implements CreateIndiceStrategy
    {
        + CreerIndice(indices: Indice[]): Indice[]
    }

    interface Observeur <<interface>>
    {
<<<<<<< HEAD
        +updateIndice(Indice indice)
=======
        void updateIndice(Indice indice)
>>>>>>> main
    }

}

package view
{
    class StartWindow
    {
        - cardLayout: CardLayout
        - cardPanel: JPanel
        - playerNameTextField: JTextField
        - nextButton: JButton
        - roundsSlider: JSlider
        - roundsPerMatchSlider: JSlider
        - attemptsSlider: JSlider
        - pinsPerCombinationSlider: JSlider
        - backButton: JButton
        - startGameButton: JButton

        + StartWindow()
<<<<<<< HEAD
        - initializeUI()
=======
        - initializeUI(): void
>>>>>>> main
        - createFirstCardPanel(): JPanel
        - createSecondCardPanel(): JPanel
        - createSliderPanel(label: String, slider: JSlider): JPanel
        - createSlider(min: int, max: int, initial: int): JSlider
    }

    class ObserverConcret implements model.Observeur
    {
<<<<<<< HEAD
        + updateIndice(indice: Indice)
=======
        + updateIndice(indice: Indice): void
>>>>>>> main
    }

    class GameWindow implements model.Observeur
    {
        + GameWindow(p: Partie)
<<<<<<< HEAD
        + updateIndice(indice: Indice)
=======
        + updateIndice(indice: Indice): void
>>>>>>> main
    }

    class EndWindow
    {
        + EndWindow()
    }
}

<<<<<<< HEAD
model.Partie --> "1..5" model.Manche : contient
model.Manche *-- "1..*" model.Couleur : - combinaison*
=======
model.Partie --> "1..*" model.Manche : contient
model.Manche *-- "1..*" model.Color : compose
>>>>>>> main
model.Manche --> model.Indice : utilise
model.Manche --> view.ObserverConcret : notifie
view.StartWindow --> model.Partie : utilise
view.GameWindow --> model.Partie : utilise
view.EndWindow --> model.Partie : utilise
@enduml